# LoquiLex

./: .coverage  .coveragerc  .dockerignore  .env.example  .envrc  .flake8  .gitignore  .gitleaks.toml  .markdown-link-check.json  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CI-TESTING.md  Dockerfile  Dockerfile.ci  ISSUE-164-PLAN.md  MIGRATION.md  Makefile  Makefile.docker-ci-test.snippet  PROJECT_OVERVIEW.md  PR_COMMENTS_RESOLUTION.md  README.md  RESOURCE_MANAGEMENT.md  SECURITY.md  __init__.py  codeql-js.sarif  codeql-py.sarif  constraints.txt  demo_structured_logging.py  docker-compose.gpu.yml  docker-compose.yml  find-crashing-test.py  fix-failing-test-pr-142.md  gitlog.txt  long_test.txt  mypy.ini  next-task.md  package-lock.json  patch.txt  pip-report.json  (+10 more)
.github/: AGENTS.md  COPILOT.md  agent-task.yml  copilot-instructions.md  dependabot.yml
.venv-simple/: pyvenv.cfg
agent-md-bundle/: AGENTS.md  CONTRIBUTING.md  README-COPILOT-NOTES.md
api/: README.md  __init__.py  server.py  supervisor.py
asr/: whisper_engine.py
audio/: capture.py
cli/: live_en_to_zh.py  vtt_to_zh.py  wav_to_vtt.py
config/: defaults.py
docs/: API_CONTRACT.md  CI_CD_SETUP.md  DOCKER.md  LINK_CHECKING.md  ORCHESTRATION_MIGRATION.md  PRODUCT_GOALS.md  RESOURCE_MANAGEMENT.md  SECURITY_PATHS.md  demo.md  logging-and-metrics.md  mvp-user-guide.md  quickstart.md  troubleshooting.md
loquilex/: .gitignore  __init__.py
loquilex-issue-60-pack/: README-issue-60.md  create-sub-issues-60.sh
mt/: translator.py
output/: srt.py  vtt.py
post/: zh_text.py
ql-db-js/: baseline-info.json  (+1 more)
(+2285 files in other folders)
