[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "loquilex"
version = "0.1.0"
description = "LoquiLex — low-latency live EN→VTT→ZH with VAD, timestamped cues, and NLLB/M2M fallback."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LoquiLex Team" }]
dependencies = [
  "faster-whisper",
  "transformers",
  "sentencepiece",
  "torch",
  "sounddevice",
  "numpy",
  "accelerate",
  "webvtt-py",
  "fastapi",
  "uvicorn[standard]",
  "rich",
]

[project.scripts]
loquilex-live = "loquilex.cli.live:main"
loquilex-wav-to-vtt = "loquilex.cli.wav_to_vtt:main"
loquilex-vtt-to-zh = "loquilex.cli.vtt_to_zh:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["loquilex*"], exclude = ["tests*", "ui*", "scripts*", "*__pycache__*"] } }

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "pytest-mock",
  "freezegun",
  "numpy",
  "black",
  "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F401", "F841", "ARG"]  # Enable unused import, unused variable, and unused arguments detection


[tool.black]
line-length = 100
